# url-reduce

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: github_ci.yml
config/: env-sample
docker_urlreduce/: docker-compose.yml  nginx.conf
mysite/: settings.py  urls.py
mysite/encurtador/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mysite/encurtador/migrations/: 0001_initial.py  0002_urlredirect.py  0003_urllog.py
mysite/encurtador/templates/encurtador/: home.html  relatorio.html
mysite/encurtador/tests/: test_views.py
